--- a/WebTools/src/i18n/locales/en/translations.json
+++ b/WebTools/src/i18n/locales/en/translations.json
@@ -930,6 +930,16 @@
     "Division.strangeNewWorlds.medical": "Medical",
     "Division.strangeNewWorlds.nursing": "Nursing",
 
+    "Equipment.uniform": "Uniform",
+    "Equipment.clothing": "Clothing",
+    "Equipment.armor": "Armour",
+    "Equipment.communicator": "Communicator",
+    "Equipment.tricorder": "Tricorder",
+    "Equipment.medkit": "MedKit",
+    "Equipment.engineeringKit": "Engineering Kit",
+    "Equipment.orionMultiKey": "Orion Multi-Key",
+    "Equipment.ushaanTor": "Ushaan-Tor ice pick",
+
     "Era.name.enterprise": "Enterprise (22nd century)",
     "Era.name.originalSeries": "Original Series (23rd century)",
     "Era.name.nextGeneration": "Next Generation (24th century)",
@@ -1199,6 +1209,15 @@
 
     "Rank.crewman3rdClass.name": "Crewman 3rd Class",
     "Rank.crewman3rdClass.abbrev": "Crew.",
+
+    "Rank.sergeant.name": "Sergeant",
+    "Rank.sergeant.abbrev": "Sgt.",
+
+    "Rank.corporal.name": "Corporal",
+    "Rank.corporal.abbrev": "Cpl.",
+
+    "Rank.private.name": "Private",
+    "Rank.private.abbrev": "Pvt.",
 
     "Role.commandingOfficer": "Commanding Officer",
 
@@ -1568,7 +1587,7 @@
     "Species.trill.traitDescription": "Trill are especially resilient to parasites, as a quirk of their potential to be Joined; Joined Trill are entirely immune to parasitic infection. However, they tend to have strong allergic reactions to insect bites and other forms of venom, which can disrupt their neurochemistry, particularly if they’re Joined. As many of the specifics of Trill physiology — especially with regards to symbiosis — are not widely known, this can result in medical complications.",
 
     "Species.tzenkethi.name": "Tzenkethi",
-    "Species.tzenkethi.description": "Aggressive and territorial, the Tzenkethi Coalition is led by a ruler known as the Autarch. The Tzenkethi government is a kratocracy, and the Autarch retains their position for as long as they can hold onto power, which transitions via coups. Under the Autarch are a series of appointed ministers, known as Tzelnira, whose job is to maintain order during shifts of power. The Tzenkethi have a well-earned reputation for pragmatism and ruthlessness, with mercy only being granted to those who earn it. Tzenkethi have little respect for weakness or frailty, but acknowledge cunning as a variant form of strength. Early in the 24th Century, the Tzenkethi engaged in several skirmishes with the Klingon Empire and even fought a border war against the Federation. Following these defeats, the Tzenkethi withdrew behind their borders, participating in little diplomacy for the better part of a century. The Tzenkethi retain lingering animosity over their war with the Federation, and the Coalition engages in regular propaganda that paints the United Federation of Planets as immoral: a source of chaos, dissidents, and illicit chemicals. The Tzenkethi government considers the Federation’s method of government—where all members and people have a voice—as tantamount to anarchy, and view Federation values as subversive. All Tzenkethi who leave their home world heavily armoured, with soldiers wearing defensive body armour with build-in weaponry and equipment. Specialists have additional equipment built into their armour, such as sensors, surgical equipment, or heavy mortars.",
+    "Species.tzenkethi.description": "Armor",
     "Species.tzenkethi.exampleValue": "Might is the Only Right",
     "Species.tzenkethi.traitDescription": "This Trait may reduce the Difficulty of Tasks requiring (extreme) flexibility. When not in combat or stressful situations, they naturally regenerate at extremely fast speeds as long as they have at least 1 Stress. Tzenkethi are singularly focused on excellence and moving up the Echelons, therefore they will do anything they can in order to complete the task ahead of them and succeed, even if this means dying in the process. Other Tzenkethi authority figures are holy to them and they would never go against direct orders. Due to a history of dealing with alien invaders the Tzenkethi are extremely mistrustful of aliens and believe they are without morals.",
 
